crates/reinhardt-core/macros/tests/ui/path/fail/empty_parameter.stderr
error: Empty parameter name. Parameters must have a name like {id} or {<int:id>}
 --> tests/ui/path/fail/empty_parameter.rs:6:22
  |
6 |     let pattern = path!("polls/{}/");
  |                         ^^^^^^^^^^^
